# data-mun

./: MultiUN.cabal  OPUS.cabal
src/: Extract.hs  MultiUNExtract.hs
src/Data/: MUN.hs  OPUS.hs
src/Data/MUN/: Loader.hs  Types.hs
src/Data/OPUS/: Loader.hs  MultiUN.hs  Raw.hs  Tmx.hs  Types.hs  Util.hs
src/NLP/: OPUS.hs
src/NLP/OPUS/: Loader.hs  Raw.hs  Tmx.hs  Types.hs  Util.hs
