name:                OPUS
version:             0.3
synopsis:            OPUS corpus bindings and exporter
license:             MIT
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable MultiUNExtract
  main-is:             MultiUNExtract.hs
  build-depends:       base        >=4.7  && <4.8
                     , filepath    >=1.3  && <1.4
                     , directory   >=1.2  && <1.3
                     , containers  >=0.5  && <0.6
                     , tagsoup     >=0.13 && <0.14
                     , zlib        >=0.5  && <0.6
                     , regex-posix >=0.95 && <0.96
                     , utf8-string >=0.3  && <0.4
                     , bytestring  >=0.10 && <0.11
                     , binary      >=0.7  && <0.8
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  exposed-modules:     Data.OPUS
                     , Data.OPUS.Tmx
                     , Data.OPUS.Types
                     , Data.OPUS.Loader
                     , Data.OPUS.MultiUN
  build-depends:       base        >=4.7  && <4.8
                     , filepath    >=1.3  && <1.4
                     , directory   >=1.2  && <1.3
                     , containers  >=0.5  && <0.6
                     , tagsoup     >=0.13 && <0.14
                     , zlib        >=0.5  && <0.6
                     , regex-posix >=0.95 && <0.96
                     , utf8-string >=0.3  && <0.4
                     , bytestring  >=0.10 && <0.11
                     , binary      >=0.7  && <0.8
                     , hxt         >=9.0  && <10.0
  hs-source-dirs:      src
  default-language:    Haskell2010

