name:                OPUS
version:             0.5.0
synopsis:            OPUS corpus bindings and exporter
license:             MIT
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable MultiUNExtract
  main-is:             MultiUNExtract.hs
  build-depends:       base        >=4.7  && <4.8
                     , filepath    >=1.3  && <1.4
                     , directory   >=1.2  && <1.3
                     , containers  >=0.5  && <0.6
                     , regex-posix >=0.95 && <0.96
                     , OPUS
  hs-source-dirs:      src/bin
  default-language:    Haskell2010

executable TMXExtract
  main-is:             TMXExtract.hs
  build-depends:       OPUS
  hs-source-dirs:      src/bin
  default-language:    Haskell2010

library
  exposed-modules:     Data.OPUS
                     , Data.OPUS.Raw
                     , Data.OPUS.Tmx
                     , Data.OPUS.Types
                     , Data.OPUS.Loader
  build-depends:       base        >=4.7  && <4.8
                     , containers  >=0.5  && <0.6
                     , zlib        >=0.5  && <0.6
                     , bytestring  >=0.10 && <0.11
                     , binary      >=0.7  && <0.8
                     , text        >=1.0  && <1.3
                     , hxt         >=9.0  && <10.0
                     , hxt-expat   >=9.0  && <10.0
                     , text-binary
  hs-source-dirs:      src
  default-language:    Haskell2010

